xv6/xv6-public/runtests.log
starting build

**********************************************************************

Test build
build xv6 using make

**********************************************************************
Trying to build project using make
make xv6.img fs.img
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie -fno-pic -O -nostdinc -I. -c bootmain.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie -fno-pic -nostdinc -I. -c bootasm.S
ld -m    elf_i386 -N -e start -Ttext 0x7C00 -o bootblock.o bootasm.o bootmain.o
objdump -S bootblock.o > bootblock.asm
objcopy -S -O binary -j .text bootblock.o bootblock
./sign.pl bootblock
boot block is 451 bytes (max 510)
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o bio.o bio.c
<<<<<<< HEAD
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o console.o console.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o exec.o exec.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o file.o file.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o fs.o fs.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o ide.o ide.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o ioapic.o ioapic.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o kalloc.o kalloc.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o kbd.o kbd.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o lapic.o lapic.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o log.o log.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o main.o main.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o mp.o mp.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o picirq.o picirq.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o pipe.o pipe.c
gcc -fno-pic -static -fno-builtin -fno-strict-aliasing -O2 -Wall -MD -ggdb -m32 -Werror -fno-omit-frame-pointer -fno-stack-protector -fno-pie -no-pie   -c -o proc.o proc.c
proc.c: In function ‘fork’:
proc.c:222:64: error: passing argument 2 of ‘walkpgdir’ makes pointer from integer without a cast [-Werror=int-conversion]
  222 |       pte_t *pte = walkpgdir(curproc -> pgdir, curproc -> head -> addr, 0);
      |                                                ~~~~~~~~~~~~~~~~^~~~~~~
      |                                                                |
      |                                                                uint {aka unsigned int}
In file included from proc.c:2:
defs.h:189:53: note: expected ‘const void *’ but argument is of type ‘uint’ {aka ‘unsigned int’}
  189 | void            walkpgdir(pde_t *pgdir, const void *va, int alloc);
      |                                         ~~~~~~~~~~~~^~
proc.c:222:20: error: void value not ignored as it ought to be
  222 |       pte_t *pte = walkpgdir(curproc -> pgdir, curproc -> head -> addr, 0);
      |                    ^~~~~~~~~
In file included from proc.c:5:
mmu.h:100:25: error: initialization of ‘char *’ from ‘unsigned int’ makes pointer from integer without a cast [-Werror=int-conversion]
  100 | #define PTE_ADDR(pte)   ((uint)(pte) & ~0xFFF)
      |                         ^
proc.c:223:22: note: in expansion of macro ‘PTE_ADDR’
  223 |       char * addr1 = PTE_ADDR(*pte);
      |                      ^~~~~~~~
proc.c: In function ‘exit’:
proc.c:267:9: error: ‘head’ undeclared (first use in this function)
  267 |   while(head){
      |         ^~~~
proc.c:267:9: note: each undeclared identifier is reported only once for each function it appears in
=======
In file included from bio.c:22:
defs.h:189:1: error: unknown type name ‘pte_t’; did you mean ‘pde_t’?
  189 | pte_t*                  walkpgdir(pde_t *pgdir, const void *va, int alloc)
      | ^~~~~
      | pde_t
In file included from bio.c:24:
spinlock.h: In function ‘walkpgdir’:
spinlock.h:2:1: error: empty declaration [-Werror]
    2 | struct spinlock {
      | ^~~~~~
In file included from bio.c:25:
sleeplock.h:2:1: error: empty declaration [-Werror]
    2 | struct sleeplock {
      | ^~~~~~
In file included from bio.c:26:
fs.h:14:1: error: empty declaration [-Werror]
   14 | struct superblock {
      | ^~~~~~
fs.h:29:1: error: empty declaration [-Werror]
   29 | struct dinode {
      | ^~~~~~
fs.h:53:1: error: empty declaration [-Werror]
   53 | struct dirent {
      | ^~~~~~
In file included from bio.c:27:
buf.h:1:1: error: empty declaration [-Werror]
    1 | struct buf {
      | ^~~~~~
bio.c:40:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   40 | {
      | ^
bio.c:63:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   63 | {
      | ^
bio.c:98:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   98 | {
      | ^
bio.c:111:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  111 | {
      | ^
bio.c:122:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  122 | {
      | ^
In file included from bio.c:22:
defs.h:189:25: error: old-style parameter declarations in prototyped function definition
  189 | pte_t*                  walkpgdir(pde_t *pgdir, const void *va, int alloc)
      |                         ^~~~~~~~~
bio.c:145: error: expected ‘{’ at end of input
bio.c:145: error: control reaches end of non-void function [-Werror=return-type]
>>>>>>> refs/remotes/origin/main
cc1: all warnings being treated as errors
make: *** [<builtin>: bio.o] Error 1


test build FAILED
 (build xv6 using make)
 make failed (error 2)
 required file 'xv6.img' does not exist after make
 required file 'fs.img' does not exist after make

Skipped 36 tests.
To keep testing after failing a test, use flag '-c' or '--continue'
